[gd_scene load_steps=8 format=2]

[ext_resource path="res://Arrow.gd" type="Script" id=1]
[ext_resource path="res://material/Attackroom/Arrow.png" type="Texture" id=2]
[ext_resource path="res://TBG02.png" type="Texture" id=3]
[ext_resource path="res://Test/arrowshooter.png" type="Texture" id=4]

[sub_resource type="RayShape2D" id=1]

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 89.11
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.07

[sub_resource type="Environment" id=3]
ambient_light_color = Color( 0.956863, 0.768627, 0.768627, 1 )
ambient_light_energy = 1.11

[node name="Arrow" type="Area2D"]
position = Vector2( 16, 12 )
scale = Vector2( 0.431624, 0.419993 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 0 )
rotation = -1.57817
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.55887
scale = Vector2( 0.116317, 0.127184 )
texture = ExtResource( 2 )

[node name="ArrowParticles" type="Particles2D" parent="."]
position = Vector2( 16, 0 )
scale = Vector2( 0.363468, 0.39498 )
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="ArrowKillerTimer" type="Timer" parent="."]
autostart = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )

[node name="StartPoint" type="Position2D" parent="."]
position = Vector2( -11.5842, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Arrow_area_entered"]
[connection signal="timeout" from="ArrowKillerTimer" to="." method="_on_ArrowKillerTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
